[gd_scene load_steps=11 format=3 uid="uid://ydkgmuf2t84u"]

[ext_resource type="Script" uid="uid://xfqgtixaitbb" path="res://Scripts/related_tasks.gd" id="1_gowdy"]
[ext_resource type="Shader" uid="uid://btgs8r3ipldd5" path="res://Shaders/task_panel.gdshader" id="1_j8sut"]
[ext_resource type="Texture2D" uid="uid://bbn7rmmy1ai52" path="res://Icons/sprb040D.dll_14_2022_1037.png" id="3_aple1"]
[ext_resource type="FontFile" uid="uid://8m7k3wp540ss" path="res://Fonts/tahoma-8pt-bold-windows-xp.ttf" id="3_ibw16"]
[ext_resource type="FontFile" uid="uid://cwih7em0ui2i2" path="res://Fonts/windows-xp-tahoma.ttf" id="4_2qnhg"]
[ext_resource type="Texture2D" uid="uid://dnulrccov1tvs" path="res://Icons/ahui.exe_14_2006-7.png" id="4_ibw16"]
[ext_resource type="Texture2D" uid="uid://doagmek3rps30" path="res://Icons/sprb040D.dll_14_2025_1037-6.png" id="7_ibw16"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g5qsa"]
shader = ExtResource("1_j8sut")
shader_parameter/top_color = Color(1, 1, 1, 1)
shader_parameter/bottom_color = Color(0.584314, 0.741176, 0.894118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aple1"]
corner_radius_top_left = 2
corner_radius_top_right = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkvnw"]
bg_color = Color(0.701961, 0.815686, 0.92549, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
anti_aliasing = false

[node name="RelatedTasks" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gowdy")

[node name="Title" type="Panel" parent="."]
material = SubResource("ShaderMaterial_g5qsa")
layout_mode = 0
offset_right = 169.0
offset_bottom = 24.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aple1")

[node name="Label" type="RichTextLabel" parent="Title"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 102.0
offset_bottom = 18.0
theme_override_colors/default_color = Color(0.129412, 0.352941, 0.807843, 1)
theme_override_fonts/bold_font = ExtResource("3_ibw16")
theme_override_font_sizes/bold_font_size = 11
bbcode_enabled = true
text = "[b]Related Tasks"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 24.0
offset_right = 169.0
offset_bottom = 174.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pkvnw")

[node name="LearnMore" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LearnMoreIcon" type="TextureRect" parent="LearnMore"]
layout_mode = 0
offset_left = 5.0
offset_top = 41.0
offset_right = 25.0
offset_bottom = 57.0
texture = ExtResource("4_ibw16")
expand_mode = 1
stretch_mode = 5

[node name="LearnMoreLabel" type="RichTextLabel" parent="LearnMore"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 32.0
offset_top = 40.0
offset_right = 161.0
offset_bottom = 72.0
mouse_default_cursor_shape = 2
theme_override_colors/default_color = Color(0.133333, 0.356863, 0.807843, 1)
theme_override_fonts/normal_font = ExtResource("4_2qnhg")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Learn about wireless networking"

[node name="PreferredOrder" type="Control" parent="."]
anchors_preset = 0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 28.0

[node name="PreferredIcon" type="TextureRect" parent="PreferredOrder"]
layout_mode = 0
offset_left = 3.0
offset_top = 103.0
offset_right = 26.0
offset_bottom = 121.0
texture = ExtResource("3_aple1")
expand_mode = 1
stretch_mode = 5

[node name="PreferredOrderLabel" type="RichTextLabel" parent="PreferredOrder"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 32.0
offset_top = 100.0
offset_right = 165.0
offset_bottom = 132.0
mouse_default_cursor_shape = 2
theme_override_colors/default_color = Color(0.133333, 0.356863, 0.807843, 1)
theme_override_fonts/normal_font = ExtResource("4_2qnhg")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Change the order of preferred networks"

[node name="AdvancedSettings" type="Control" parent="."]
anchors_preset = 0
offset_top = -7.0
offset_right = 40.0
offset_bottom = 33.0

[node name="AdvancedIcon" type="TextureRect" parent="AdvancedSettings"]
layout_mode = 0
offset_left = 6.0
offset_top = 145.0
offset_right = 27.0
offset_bottom = 161.0
texture = ExtResource("7_ibw16")
expand_mode = 1
stretch_mode = 5

[node name="AdvancedSettingsLabel" type="RichTextLabel" parent="AdvancedSettings"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 33.0
offset_top = 145.0
offset_right = 140.0
offset_bottom = 174.0
mouse_default_cursor_shape = 2
theme_override_colors/default_color = Color(0.133333, 0.356863, 0.807843, 1)
theme_override_fonts/normal_font = ExtResource("4_2qnhg")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Change advanced settings
"

[connection signal="mouse_entered" from="LearnMore/LearnMoreLabel" to="." method="_on_learn_more_label_mouse_entered"]
[connection signal="mouse_exited" from="LearnMore/LearnMoreLabel" to="." method="_on_learn_more_label_mouse_exited"]
[connection signal="mouse_entered" from="PreferredOrder/PreferredOrderLabel" to="." method="_on_preferred_order_label_mouse_entered"]
[connection signal="mouse_exited" from="PreferredOrder/PreferredOrderLabel" to="." method="_on_preferred_order_label_mouse_exited"]
[connection signal="mouse_entered" from="AdvancedSettings/AdvancedSettingsLabel" to="." method="_on_advanced_settings_label_mouse_entered"]
[connection signal="mouse_exited" from="AdvancedSettings/AdvancedSettingsLabel" to="." method="_on_advanced_settings_label_mouse_exited"]
